# ncaab_manager_pro

./: .gitignore  SETUP.md  TESTING_CHECKLIST.md  docker-compose.yml  main.py  pyproject.toml  test.ipynb
backend/: .env.example  .gitignore  main.py  requirements.txt
backend/api/routes/: analytics.py  betting.py  games.py  players.py  seasons.py  teams.py
backend/core/: cache.py  config.py  database.py
backend/models/: models.py
backend/schemas/: game.py  player.py  team.py
data/: README.md  add_indexes.sql  backfill_season.py  create_db.py  discover_completed_games.py  event_ids.txt  get_coaches.py  get_events.py  get_odds.py  get_players.py  get_predictions.py  get_rankings.py  get_seasons.py  get_teams.py  setup_indexes.py  update_daily.py  update_data.py  update_games.py  update_odds.py  update_predictions.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/betting/: page.tsx
frontend/src/app/players/: page.tsx
frontend/src/app/teams/: page.tsx
frontend/src/app/teams/[team_id]/: page.tsx  page.tsx.backup
frontend/src/components/games/: GameCard.tsx
frontend/src/components/layout/: Navigation.tsx
frontend/src/components/ui/: ErrorMessage.tsx  LoadingSpinner.tsx
frontend/src/lib/: api.ts  types.ts
