[project]
name = "ncaab-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "httpx==0.28.1",
    "ipykernel>=7.1.0",
    "pandas==2.3.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.17",
    "redis==5.2.0",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.0",
]
